--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <link rel="icon" type="image/jpeg" href="/studko.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Študko čakalna vrsta</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Studko Waitlist - Platforma za študente" />
+    <meta name="author" content="Studko" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph meta tags for social sharing -->
+    <meta property="og:title" content="Studko Waitlist" />
+    <meta property="og:description" content="Študko - Platforma za študente" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/studko.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Studko Waitlist" />
+    <meta name="twitter:description" content="Študko - Platforma za študente" />
+    <meta name="twitter:image" content="/studko.jpg" />
   </head>
 
   <body>
